# unicodeitplus

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSES_bundled  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
docs/: Makefile  conf.py  index.rst
src/unicodeitplus/: __init__.py  _make_data.py  cli.py  data.py  parser.py  transform.py
tests/: test_cli.py  test_latex.py
tools/: generate_examples.py  latex.g  make_data.py  make_parser.py
