[build-system]
requires = [
    "setuptools>=46.4",
    "setuptools_scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "unicodeitplus"
description = "Converts simple LaTeX to an unicode approximation"
dependencies = ["lark"]
maintainers = [
    { name = "Hans Dembinski" },
    { email = "hans.dembinski@gmail.com" }
]
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/HDembinski/unicodeitplus"

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
unicodeitplus = "unicodeitplus.cli:main"

[tool.setuptools_scm]

[tool.ruff]
select = ["E", "F", "D"]
extend-ignore = ["D203", "D212"]
extend-exclude = ["src/unicodeitplus/parser.py", "docs", "setup.py"]
fix = true

[tool.ruff.per-file-ignores]
"tests/test_*.py" = ["B", "D"]

[tool.mypy]
strict = true
no_implicit_optional = false
allow_redefinition = true
ignore_missing_imports = true
show_error_codes = true
exclude = ["/parser\\.py$"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q -ra --ff"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.coverage.run]
relative_files = true
source = ["unicodeitplus"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.pydocstyle]
convention = "numpy"
